modify all mongodb drivers to set its configuration via setProperty