@@ -20,15 +20,15 @@ import com.mongodb.client.MongoCollection;
 import com.mongodb.client.model.Filters;
 import com.mongodb.client.model.ReplaceOptions;
 import com.mongodb.client.result.UpdateResult;
-import io.flamingock.core.engine.audit.writer.AuditStageStatus;
 import io.flamingock.commons.utils.Result;
+import io.flamingock.core.community.LocalAuditor;
+import io.flamingock.core.engine.audit.writer.AuditEntry;
+import io.flamingock.core.engine.audit.writer.AuditStageStatus;
 import io.flamingock.oss.driver.common.mongodb.CollectionInitializator;
 import io.flamingock.oss.driver.common.mongodb.MongoDBAuditMapper;
 import io.flamingock.oss.driver.mongodb.springdata.v4.internal.mongodb.SpringDataMongoV4CollectionWrapper;
 import io.flamingock.oss.driver.mongodb.springdata.v4.internal.mongodb.SpringDataMongoV4DocumentWrapper;
-import io.flamingock.cloud.transaction.mongodb.sync.v4.cofig.ReadWriteConfiguration;
-import io.flamingock.core.community.LocalAuditor;
-import io.flamingock.core.engine.audit.writer.AuditEntry;
+import io.flamingock.oss.driver.mongodb.sync.v4.internal.ReadWriteConfiguration;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 import org.slf4j.Logger;
@@ -36,20 +36,19 @@ import org.slf4j.LoggerFactory;
 import org.springframework.data.mongodb.core.MongoTemplate;
 
 import java.util.LinkedList;
-import java.util.stream.Collectors;
 
 import static io.flamingock.core.community.AuditEntryField.*;
 
 public class SpringDataMongoV4Auditor implements LocalAuditor {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(SpringDataMongoV4Auditor.class);
 
     private final MongoCollection<Document> collection;
     private final MongoDBAuditMapper<SpringDataMongoV4DocumentWrapper> mapper = new MongoDBAuditMapper<>(() -> new SpringDataMongoV4DocumentWrapper(new Document()));
 
     SpringDataMongoV4Auditor(MongoTemplate mongoTemplate,
-                      String collectionName,
-                      ReadWriteConfiguration readWriteConfiguration) {
+                             String collectionName,
+                             ReadWriteConfiguration readWriteConfiguration) {
         this.collection = mongoTemplate.getCollection(collectionName)
                 .withReadConcern(readWriteConfiguration.getReadConcern())
                 .withReadPreference(readWriteConfiguration.getReadPreference())
@@ -62,7 +61,7 @@ public class SpringDataMongoV4Auditor implements LocalAuditor {
                 () -> new SpringDataMongoV4DocumentWrapper(new Document()),
                 new String[]{KEY_EXECUTION_ID, KEY_CHANGE_ID, KEY_STATE}
         );
-        if(indexCreation) {
+        if (indexCreation) {
             initializer.initialize();
         } else {
             initializer.justValidateCollection();
@@ -97,7 +96,7 @@ public class SpringDataMongoV4Auditor implements LocalAuditor {
                 .stream()
                 .map(SpringDataMongoV4DocumentWrapper::new)
                 .map(mapper::fromDocument)
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(builder::addEntry);
         return builder.build();
 
